fix #3 dont allow user to scroll to off-screen nav-menu on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,11 +2,14 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+
+  overflow-x: hidden;
 }
 
-body {
+body{
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  
 }
